# campus-assistant

./: .gitignore  Dockerfile  README.md  app.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  results_final.json  run_baseline.py  server.py  tasks.py
agent/: __init__.py  baseline_agent.py
campus_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
env/: __init__.py  env_logic.py  models.py  openenv.yaml
server/: app.py
tasks/: tasks.json
