[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-assistant"
version = "1.0.0"
description = "Autonomous AI Campus Assistant - OpenEnv Compatible"
readme = "README.md"
authors = [
    {name = "Aniket Salunke", email = "niksalunke1441@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "agent*"]
